--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     
     
-    <script src="script.js">
-
-    </script>
+    <script src="script.js"></script>
+    <script src="scriptComplicated.js"></script>
   </body>
 </html>
