--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	</ul>
 </div>
 
-<script type="text/javascript" src="/scripts/script.js"></script>
+<script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
