--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <input id="input">
+  <p id="result"></p>  
 
 <script src="script.js"></script> 
 </body>
