--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</form>
 	<small>*Мы гарантируем конфидициальность передаваемых данных</small>
 	<br>
-	<a href="#service-block"><img src="images/scroll.svg" alt=""></a>
+	<a id="scrollButton"><img src="images/scroll.svg" alt=""></a>
 </main>
 
 
