--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</header>
 
 	<div class="todo-container">
-
+		<ul class="todo todo-notifications"></ul>
 		<ul class="todo todo-list" id="todo">
 			<li class="todo-item">
 				<span class="text-todo">Купить МиниКупер</span>
